converted industry variables to string

--- a/nbs/01_wrds/01_crspm.ipynb
+++ b/nbs/01_wrds/01_crspm.ipynb
@@ -221,7 +221,7 @@
     "    \n",
     "    return ['permno','permco','date',\n",
     "            'ret', 'retx', 'shrout', 'prc', \n",
-    "            'shrcd', 'exchcd','siccd','ticker','cusip','ncusip',\n",
+    "            'shrcd', 'exchcd','siccd','naics', 'ticker','cusip','ncusip',\n",
     "            'dlret','dlstcd','dlstdt']            "
    ]
   },
@@ -234,7 +234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['permno', 'permco', 'date', 'ret', 'retx', 'shrout', 'prc', 'shrcd', 'exchcd', 'siccd', 'ticker', 'cusip', 'ncusip', 'dlret', 'dlstcd', 'dlstdt']\n"
+      "['permno', 'permco', 'date', 'ret', 'retx', 'shrout', 'prc', 'shrcd', 'exchcd', 'siccd', 'naics', 'ticker', 'cusip', 'ncusip', 'dlret', 'dlstcd', 'dlstdt']\n"
      ]
     }
    ],
@@ -284,7 +284,7 @@
     {
      "data": {
       "text/plain": [
-       "'a.ret,b.siccd,c.dlret'"
+       "'c.dlret,b.siccd,b.naics,a.ret'"
       ]
      },
      "execution_count": null,
@@ -294,7 +294,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "parse_varlist(['ret', 'siccd', 'dlret'])"
+    "parse_varlist(['ret', 'siccd', 'naics', 'dlret'])"
    ]
   },
   {
@@ -485,7 +485,9 @@
        "      <th></th>\n",
        "      <th>permno</th>\n",
        "      <th>date</th>\n",
+       "      <th>siccd</th>\n",
        "      <th>shrout</th>\n",
+       "      <th>naics</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -495,7 +497,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [permno, date, shrout]\n",
+       "Columns: [permno, date, siccd, shrout, naics]\n",
        "Index: []"
       ]
      },
@@ -506,7 +508,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "r = get_raw_data(vars=['shrout'], nrows=100)\n",
+    "r = get_raw_data(vars=['shrout','siccd','naics'], nrows=100)\n",
     "r.head(0)"
    ]
   },
@@ -566,11 +568,15 @@
        "      <th></th>\n",
        "      <th>date</th>\n",
        "      <th>dtdate</th>\n",
+       "      <th>siccd</th>\n",
        "      <th>shrout</th>\n",
+       "      <th>naics</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>permno</th>\n",
        "      <th>Mdate</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -583,7 +589,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [date, dtdate, shrout]\n",
+       "Columns: [date, dtdate, siccd, shrout, naics]\n",
        "Index: []"
       ]
      },
@@ -651,16 +657,20 @@
        "      <th></th>\n",
        "      <th>date</th>\n",
        "      <th>dtdate</th>\n",
-       "      <th>dlstcd</th>\n",
-       "      <th>dlstdt</th>\n",
-       "      <th>ret</th>\n",
-       "      <th>exchcd</th>\n",
        "      <th>dlret</th>\n",
+       "      <th>dlstdt</th>\n",
+       "      <th>naics</th>\n",
+       "      <th>siccd</th>\n",
+       "      <th>dlstcd</th>\n",
+       "      <th>exchcd</th>\n",
+       "      <th>ret</th>\n",
        "      <th>ret_adj</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>permno</th>\n",
        "      <th>Mdate</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -678,7 +688,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [date, dtdate, dlstcd, dlstdt, ret, exchcd, dlret, ret_adj]\n",
+       "Columns: [date, dtdate, dlret, dlstdt, naics, siccd, dlstcd, exchcd, ret, ret_adj]\n",
        "Index: []"
       ]
      },
@@ -689,7 +699,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "dl = delist_adj_ret(process_raw_data(get_raw_data(['dlret','dlstcd','dlstdt','exchcd','ret'], nrows=10)))   \n",
+    "dl = delist_adj_ret(process_raw_data(get_raw_data(['dlret','dlstcd','dlstdt','exchcd','ret','siccd','naics'], nrows=1000)))   \n",
     "dl.head(0)"
    ]
   },
@@ -705,6 +715,9 @@
     ") -> pd.DataFrame:\n",
     "    \n",
     "    out = pd.DataFrame(index=df.index)\n",
+    "\n",
+    "    out['siccd_str'] = df['siccd'].astype('Int64').astype('string').str.zfill(4)\n",
+    "    out['naics_str'] = df['naics'].astype('string')\n",
     "\n",
     "    out['ret_adj'] = delist_adj_ret(df, adj_ret_var='ret_adj')[['ret_adj']].copy()\n",
     "\n",
@@ -751,6 +764,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th>siccd_str</th>\n",
+       "      <th>naics_str</th>\n",
        "      <th>ret_adj</th>\n",
        "      <th>lbhret12</th>\n",
        "      <th>retvol12</th>\n",
@@ -758,6 +773,8 @@
        "    <tr>\n",
        "      <th>permno</th>\n",
        "      <th>Mdate</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -770,7 +787,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [ret_adj, lbhret12, retvol12]\n",
+       "Columns: [siccd_str, naics_str, ret_adj, lbhret12, retvol12]\n",
        "Index: []"
       ]
      },
