--- a/nbs/01_wrds/02_crspd.ipynb
+++ b/nbs/01_wrds/02_crspd.ipynb
@@ -283,7 +283,7 @@
     {
      "data": {
       "text/plain": [
-       "'a.ret,c.dlret,b.siccd'"
+       "'b.siccd,c.dlret,a.ret'"
       ]
      },
      "execution_count": null,
@@ -650,16 +650,20 @@
        "      <th></th>\n",
        "      <th>date</th>\n",
        "      <th>dtdate</th>\n",
-       "      <th>ret</th>\n",
-       "      <th>exchcd</th>\n",
-       "      <th>dlstdt</th>\n",
+       "      <th>siccd</th>\n",
        "      <th>dlstcd</th>\n",
+       "      <th>ret</th>\n",
+       "      <th>naics</th>\n",
+       "      <th>dlstdt</th>\n",
+       "      <th>exchcd</th>\n",
        "      <th>dlret</th>\n",
        "      <th>ret_adj</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>permno</th>\n",
        "      <th>Ddate</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -677,7 +681,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [date, dtdate, ret, exchcd, dlstdt, dlstcd, dlret, ret_adj]\n",
+       "Columns: [date, dtdate, siccd, dlstcd, ret, naics, dlstdt, exchcd, dlret, ret_adj]\n",
        "Index: []"
       ]
      },
@@ -688,7 +692,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "dl = delist_adj_ret(process_raw_data(get_raw_data(['dlret','dlstcd','dlstdt','exchcd','ret'], nrows=1000)))   \n",
+    "dl = delist_adj_ret(process_raw_data(get_raw_data(['dlret','dlstcd','dlstdt','exchcd','ret','naics','siccd'], nrows=1000)))   \n",
     "dl.head(0)"
    ]
   },
@@ -706,6 +710,9 @@
     "    out = pd.DataFrame(index=df.index)\n",
     "\n",
     "    out['ret_adj'] = delist_adj_ret(df, adj_ret_var='ret_adj')[['ret_adj']].copy()\n",
+    "\n",
+    "    out['siccd_str'] = df['siccd'].astype('Int64').astype('string').str.zfill(4)\n",
+    "    out['naics_str'] = df['naics'].astype('string')\n",
     "\n",
     "    # Note that we are not using trading days below, but calendar days\n",
     "    out['lbhret12'] = pdm.rrolling(1+df['ret'], window=30, func='prod', skipna=True) - 1\n",
@@ -752,6 +759,8 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th>ret_adj</th>\n",
+       "      <th>siccd_str</th>\n",
+       "      <th>naics_str</th>\n",
        "      <th>lbhret12</th>\n",
        "      <th>retvol12</th>\n",
        "    </tr>\n",
@@ -761,99 +770,19 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">10000</th>\n",
-       "      <th>1986-01-07</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1986-01-08</th>\n",
-       "      <td>-0.024390</td>\n",
-       "      <td>-2.439024e-02</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1986-01-09</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>-2.439024e-02</td>\n",
-       "      <td>0.017247</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1986-01-10</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>-2.439024e-02</td>\n",
-       "      <td>0.014082</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1986-01-13</th>\n",
-       "      <td>0.050000</td>\n",
-       "      <td>5.000000e-02</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">10001</th>\n",
-       "      <th>1988-07-12</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>-3.846154e-02</td>\n",
-       "      <td>0.027196</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1988-07-13</th>\n",
-       "      <td>0.040000</td>\n",
-       "      <td>-2.349798e-09</td>\n",
-       "      <td>0.039233</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1988-07-14</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>-2.349798e-09</td>\n",
-       "      <td>0.032035</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1988-07-15</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>-2.349798e-09</td>\n",
-       "      <td>0.027744</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1988-07-18</th>\n",
-       "      <td>-0.038462</td>\n",
-       "      <td>-3.846154e-02</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1000 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    ret_adj      lbhret12  retvol12\n",
-       "permno Ddate                                       \n",
-       "10000  1986-01-07       NaN  0.000000e+00       NaN\n",
-       "       1986-01-08 -0.024390 -2.439024e-02       NaN\n",
-       "       1986-01-09  0.000000 -2.439024e-02  0.017247\n",
-       "       1986-01-10  0.000000 -2.439024e-02  0.014082\n",
-       "       1986-01-13  0.050000  5.000000e-02       NaN\n",
-       "...                     ...           ...       ...\n",
-       "10001  1988-07-12  0.000000 -3.846154e-02  0.027196\n",
-       "       1988-07-13  0.040000 -2.349798e-09  0.039233\n",
-       "       1988-07-14  0.000000 -2.349798e-09  0.032035\n",
-       "       1988-07-15  0.000000 -2.349798e-09  0.027744\n",
-       "       1988-07-18 -0.038462 -3.846154e-02       NaN\n",
-       "\n",
-       "[1000 rows x 3 columns]"
+       "Empty DataFrame\n",
+       "Columns: [ret_adj, siccd_str, naics_str, lbhret12, retvol12]\n",
+       "Index: []"
       ]
      },
      "execution_count": null,
@@ -863,7 +792,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "ftr"
+    "ftr.head(0)"
    ]
   },
   {
