--- a/nbs/01_wrds/03_compa_ccm.ipynb
+++ b/nbs/01_wrds/03_compa_ccm.ipynb
@@ -190,7 +190,7 @@
     {
      "data": {
       "text/plain": [
-       "'a.lt,a.at'"
+       "'a.at,a.lt'"
       ]
      },
      "execution_count": null,
@@ -394,8 +394,8 @@
        "      <th>linkprim</th>\n",
        "      <th>gvkey</th>\n",
        "      <th>datadate</th>\n",
-       "      <th>lt</th>\n",
        "      <th>at</th>\n",
+       "      <th>lt</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -405,7 +405,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [permno, permco, liid, linkprim, gvkey, datadate, lt, at]\n",
+       "Columns: [permno, permco, liid, linkprim, gvkey, datadate, at, lt]\n",
        "Index: []"
       ]
      },
@@ -461,21 +461,21 @@
        "      <th>linkprim</th>\n",
        "      <th>gvkey</th>\n",
        "      <th>datadate</th>\n",
-       "      <th>ivao</th>\n",
-       "      <th>naicsh</th>\n",
-       "      <th>capx</th>\n",
-       "      <th>csho</th>\n",
+       "      <th>pstk</th>\n",
+       "      <th>ni</th>\n",
+       "      <th>dltis</th>\n",
+       "      <th>xpp</th>\n",
        "      <th>...</th>\n",
-       "      <th>dvc</th>\n",
-       "      <th>aqc</th>\n",
-       "      <th>ivst</th>\n",
-       "      <th>naics</th>\n",
-       "      <th>dvpsx_f</th>\n",
-       "      <th>txdb</th>\n",
-       "      <th>dltr</th>\n",
-       "      <th>fincf</th>\n",
-       "      <th>pstkl</th>\n",
-       "      <th>cusip</th>\n",
+       "      <th>gdwl</th>\n",
+       "      <th>lt</th>\n",
+       "      <th>xrd</th>\n",
+       "      <th>tstk</th>\n",
+       "      <th>fic</th>\n",
+       "      <th>lct</th>\n",
+       "      <th>che</th>\n",
+       "      <th>dpact</th>\n",
+       "      <th>seq</th>\n",
+       "      <th>xsga</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -486,7 +486,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [permno, permco, liid, linkprim, gvkey, datadate, ivao, naicsh, capx, csho, dltt, xint, txdi, oancf, wcap, sstk, dltis, rect, xpp, oibdp, emp, tstk, intan, dlc, prstkc, at, pifo, drlt, fic, pstkrv, fyear, xrent, tic, dpact, xad, drc, fyr, xacc, revt, xrd, itcb, pstk, exchg, ppent, txfo, dvp, cogs, ib, ivncf, ni, act, invt, ajex, seq, dd1, ap, sich, prcc_f, rdip, ppegt, xsga, gdwl, mib, sppe, dv, txt, dp, lt, lct, sale, txditc, sic, che, ceq, cik, re, pi, txp, dvc, aqc, ivst, naics, dvpsx_f, txdb, dltr, fincf, pstkl, cusip]\n",
+       "Columns: [permno, permco, liid, linkprim, gvkey, datadate, pstk, ni, dltis, xpp, dv, prcc_f, fyr, txditc, ap, sic, csho, rdip, drc, dvp, capx, wcap, xacc, pstkrv, dlc, oibdp, rect, dltr, txdi, re, pifo, ivao, ppegt, xrent, ib, oancf, fincf, drlt, act, ivst, cogs, naics, pstkl, tic, txp, emp, dd1, ajex, prstkc, dvc, itcb, mib, invt, sstk, cik, xad, dp, ivncf, sich, ppent, intan, txt, naicsh, xint, pi, cusip, fyear, aqc, exchg, at, ceq, sale, txdb, revt, dvpsx_f, txfo, dltt, sppe, gdwl, lt, xrd, tstk, fic, lct, che, dpact, seq, xsga]\n",
        "Index: []\n",
        "\n",
        "[0 rows x 88 columns]"
@@ -565,21 +565,21 @@
        "      <th>liid</th>\n",
        "      <th>linkprim</th>\n",
        "      <th>gvkey</th>\n",
-       "      <th>ivao</th>\n",
-       "      <th>naicsh</th>\n",
-       "      <th>capx</th>\n",
-       "      <th>csho</th>\n",
+       "      <th>pstk</th>\n",
+       "      <th>ni</th>\n",
+       "      <th>dltis</th>\n",
+       "      <th>xpp</th>\n",
        "      <th>...</th>\n",
-       "      <th>dvc</th>\n",
-       "      <th>aqc</th>\n",
-       "      <th>ivst</th>\n",
-       "      <th>naics</th>\n",
-       "      <th>dvpsx_f</th>\n",
-       "      <th>txdb</th>\n",
-       "      <th>dltr</th>\n",
-       "      <th>fincf</th>\n",
-       "      <th>pstkl</th>\n",
-       "      <th>cusip</th>\n",
+       "      <th>gdwl</th>\n",
+       "      <th>lt</th>\n",
+       "      <th>xrd</th>\n",
+       "      <th>tstk</th>\n",
+       "      <th>fic</th>\n",
+       "      <th>lct</th>\n",
+       "      <th>che</th>\n",
+       "      <th>dpact</th>\n",
+       "      <th>seq</th>\n",
+       "      <th>xsga</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>permno</th>\n",
@@ -615,7 +615,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [datadate, dtdate, permco, liid, linkprim, gvkey, ivao, naicsh, capx, csho, dltt, xint, txdi, oancf, wcap, sstk, dltis, rect, xpp, oibdp, emp, tstk, intan, dlc, prstkc, at, pifo, drlt, fic, pstkrv, fyear, xrent, tic, dpact, xad, drc, fyr, xacc, revt, xrd, itcb, pstk, exchg, ppent, txfo, dvp, cogs, ib, ivncf, ni, act, invt, ajex, seq, dd1, ap, sich, prcc_f, rdip, ppegt, xsga, gdwl, mib, sppe, dv, txt, dp, lt, lct, sale, txditc, sic, che, ceq, cik, re, pi, txp, dvc, aqc, ivst, naics, dvpsx_f, txdb, dltr, fincf, pstkl, cusip]\n",
+       "Columns: [datadate, dtdate, permco, liid, linkprim, gvkey, pstk, ni, dltis, xpp, dv, prcc_f, fyr, txditc, ap, sic, csho, rdip, drc, dvp, capx, wcap, xacc, pstkrv, dlc, oibdp, rect, dltr, txdi, re, pifo, ivao, ppegt, xrent, ib, oancf, fincf, drlt, act, ivst, cogs, naics, pstkl, tic, txp, emp, dd1, ajex, prstkc, dvc, itcb, mib, invt, sstk, cik, xad, dp, ivncf, sich, ppent, intan, txt, naicsh, xint, pi, cusip, fyear, aqc, exchg, at, ceq, sale, txdb, revt, dvpsx_f, txfo, dltt, sppe, gdwl, lt, xrd, tstk, fic, lct, che, dpact, seq, xsga]\n",
        "Index: []\n",
        "\n",
        "[0 rows x 88 columns]"
@@ -644,8 +644,13 @@
     "    out = pd.DataFrame(index=df.index)\n",
     "\n",
     "    # industry \n",
-    "    out['sic_full'] = np.where(df['sich'].isna(), df['sic'], df['sich'])\n",
-    "    out['naics_full'] = np.where(df['naicsh'].isna(), df['naics'], df['sich'])\n",
+    "    out['sich_str'] = df['sich'].astype('Int64').astype('string').str.zfill(4)\n",
+    "    out['naicsh_str'] = df['naicsh'].astype('Int64').astype('string')\n",
+    "    out['sic_str'] = df['sic'].astype('string')\n",
+    "    out['naics_str'] = df['naics'].astype('string')\n",
+    "\n",
+    "    out['sic_full'] = out['sich_str'].fillna(out['sic_str'])\n",
+    "    out['naics_full'] = out['naicsh_str'].fillna(out['naics_str'])\n",
     "\n",
     "    # size \n",
     "    out['stock_price'] = np.abs(df['prcc_f'])\n",
@@ -739,16 +744,16 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th>sich_str</th>\n",
+       "      <th>naicsh_str</th>\n",
+       "      <th>sic_str</th>\n",
+       "      <th>naics_str</th>\n",
        "      <th>sic_full</th>\n",
        "      <th>naics_full</th>\n",
        "      <th>stock_price</th>\n",
        "      <th>lag_at</th>\n",
        "      <th>mktcap</th>\n",
        "      <th>pstk0</th>\n",
-       "      <th>pref_stock</th>\n",
-       "      <th>shreq</th>\n",
-       "      <th>bookeq</th>\n",
-       "      <th>bookeq_w_itcb</th>\n",
        "      <th>...</th>\n",
        "      <th>cflow_is</th>\n",
        "      <th>cflow_cfs</th>\n",
@@ -790,15 +795,15 @@
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 34 columns</p>\n",
+       "<p>0 rows × 38 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [sic_full, naics_full, stock_price, lag_at, mktcap, pstk0, pref_stock, shreq, bookeq, bookeq_w_itcb, tobinq, equityiss_tot, equityiss_cfs, debtiss_tot, debtiss_cfs, debtiss_bs, equityiss_tot_2la, equityiss_cfs_2la, debtiss_tot_2la, debtiss_cfs_2la, debtiss_bs_2la, ppent_pch, capx_2la, roa, cflow_is, cflow_cfs, cflow_full, cflow_is_2la, cflow_cfs_2la, cflow_full_2la, cash_2a, booklev, dividends_2la, repurchases_2la]\n",
+       "Columns: [sich_str, naicsh_str, sic_str, naics_str, sic_full, naics_full, stock_price, lag_at, mktcap, pstk0, pref_stock, shreq, bookeq, bookeq_w_itcb, tobinq, equityiss_tot, equityiss_cfs, debtiss_tot, debtiss_cfs, debtiss_bs, equityiss_tot_2la, equityiss_cfs_2la, debtiss_tot_2la, debtiss_cfs_2la, debtiss_bs_2la, ppent_pch, capx_2la, roa, cflow_is, cflow_cfs, cflow_full, cflow_is_2la, cflow_cfs_2la, cflow_full_2la, cash_2a, booklev, dividends_2la, repurchases_2la]\n",
        "Index: []\n",
        "\n",
-       "[0 rows x 34 columns]"
+       "[0 rows x 38 columns]"
       ]
      },
      "execution_count": null,
