--- a/nbs/01_wrds/04_compq.ipynb
+++ b/nbs/01_wrds/04_compq.ipynb
@@ -501,20 +501,20 @@
        "      <th>fyearq</th>\n",
        "      <th>fqtr</th>\n",
        "      <th>rdq</th>\n",
-       "      <th>dvpq</th>\n",
-       "      <th>txtq</th>\n",
-       "      <th>naics</th>\n",
-       "      <th>capxy</th>\n",
-       "      <th>actq</th>\n",
-       "      <th>...</th>\n",
-       "      <th>opepsq</th>\n",
-       "      <th>revtq</th>\n",
-       "      <th>cshoq</th>\n",
-       "      <th>intanq</th>\n",
-       "      <th>cheq</th>\n",
-       "      <th>ceqq</th>\n",
+       "      <th>ibq</th>\n",
        "      <th>niq</th>\n",
        "      <th>invtq</th>\n",
+       "      <th>prccq</th>\n",
+       "      <th>scstkcy</th>\n",
+       "      <th>...</th>\n",
+       "      <th>atq</th>\n",
+       "      <th>txditcq</th>\n",
+       "      <th>dlttq</th>\n",
+       "      <th>seqq</th>\n",
+       "      <th>dvpq</th>\n",
+       "      <th>wcapq</th>\n",
+       "      <th>xintq</th>\n",
+       "      <th>cheq</th>\n",
        "      <th>sich</th>\n",
        "      <th>naicsh</th>\n",
        "    </tr>\n",
@@ -527,7 +527,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [gvkey, datadate, fyearq, fqtr, rdq, dvpq, txtq, naics, capxy, actq, fopty, scstkcy, wcapq, mibq, cshprq, piq, fyr, sstky, epspiq, cogsq, exchg, dlttq, dvy, cusip, tstkq, dlcq, cik, saleq, ppegtq, prstkcy, dltry, atq, sic, sppey, aqcy, txdiq, xintq, fdateq, lctq, epspxq, ppentq, rectrq, seqq, dpq, ltq, gdwlq, pstkq, ivaoq, txditcq, prccq, xrdq, rectq, cdvcy, npq, epsfxq, pstkrq, ajexq, oiadpq, epsfiq, fic, dltisy, ibq, xsgaq, oancfy, oibdpq, req, apdedateq, opepsq, revtq, cshoq, intanq, cheq, ceqq, niq, invtq, sich, naicsh]\n",
+       "Columns: [gvkey, datadate, fyearq, fqtr, rdq, ibq, niq, invtq, prccq, scstkcy, xrdq, aqcy, lctq, gdwlq, dltisy, tstkq, epsfiq, intanq, piq, cogsq, npq, ajexq, req, pstkq, dltry, epsfxq, ppegtq, fopty, rectq, cshprq, cshoq, prstkcy, fyr, cik, ppentq, dlcq, opepsq, mibq, oiadpq, rectrq, apdedateq, dvy, oancfy, dpq, naics, txtq, fic, sppey, oibdpq, xsgaq, sstky, exchg, revtq, sic, pstkrq, epspiq, actq, epspxq, ivaoq, txdiq, fdateq, saleq, capxy, cdvcy, ceqq, cusip, ltq, atq, txditcq, dlttq, seqq, dvpq, wcapq, xintq, cheq, sich, naicsh]\n",
        "Index: []\n",
        "\n",
        "[0 rows x 77 columns]"
@@ -624,18 +624,18 @@
        "      <th>fyearq</th>\n",
        "      <th>fqtr</th>\n",
        "      <th>rdq</th>\n",
-       "      <th>dvpq</th>\n",
-       "      <th>txtq</th>\n",
-       "      <th>naics</th>\n",
-       "      <th>...</th>\n",
-       "      <th>opepsq</th>\n",
-       "      <th>revtq</th>\n",
-       "      <th>cshoq</th>\n",
-       "      <th>intanq</th>\n",
-       "      <th>cheq</th>\n",
-       "      <th>ceqq</th>\n",
+       "      <th>ibq</th>\n",
        "      <th>niq</th>\n",
        "      <th>invtq</th>\n",
+       "      <th>...</th>\n",
+       "      <th>atq</th>\n",
+       "      <th>txditcq</th>\n",
+       "      <th>dlttq</th>\n",
+       "      <th>seqq</th>\n",
+       "      <th>dvpq</th>\n",
+       "      <th>wcapq</th>\n",
+       "      <th>xintq</th>\n",
+       "      <th>cheq</th>\n",
        "      <th>sich</th>\n",
        "      <th>naicsh</th>\n",
        "    </tr>\n",
@@ -676,18 +676,18 @@
        "      <td>2020.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>2021-03-23</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>423860</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.37</td>\n",
-       "      <td>411.8</td>\n",
-       "      <td>35.319</td>\n",
-       "      <td>123.2</td>\n",
-       "      <td>112.6</td>\n",
-       "      <td>932.4</td>\n",
+       "      <td>31.1</td>\n",
        "      <td>28.1</td>\n",
        "      <td>616.2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1642.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>266.8</td>\n",
+       "      <td>932.4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>640.7</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>112.6</td>\n",
        "      <td>5080.0</td>\n",
        "      <td>423860.0</td>\n",
        "    </tr>\n",
@@ -701,13 +701,13 @@
        "gvkey  Qdate                                                                    \n",
        "001004 2021Q1  2021-02-28 2021-02-28    2020-09-30       2020Q3  2020.0   3.0   \n",
        "\n",
-       "                     rdq  dvpq  txtq   naics  ...  opepsq  revtq   cshoq  \\\n",
-       "gvkey  Qdate                                  ...                          \n",
-       "001004 2021Q1 2021-03-23   0.0  12.0  423860  ...    0.37  411.8  35.319   \n",
+       "                     rdq   ibq   niq  invtq  ...     atq  txditcq  dlttq  \\\n",
+       "gvkey  Qdate                                 ...                           \n",
+       "001004 2021Q1 2021-03-23  31.1  28.1  616.2  ...  1642.8      0.0  266.8   \n",
        "\n",
-       "               intanq   cheq   ceqq   niq  invtq    sich    naicsh  \n",
-       "gvkey  Qdate                                                        \n",
-       "001004 2021Q1   123.2  112.6  932.4  28.1  616.2  5080.0  423860.0  \n",
+       "                seqq  dvpq  wcapq  xintq   cheq    sich    naicsh  \n",
+       "gvkey  Qdate                                                       \n",
+       "001004 2021Q1  932.4   0.0  640.7    1.1  112.6  5080.0  423860.0  \n",
        "\n",
        "[1 rows x 79 columns]"
       ]
@@ -840,9 +840,14 @@
     "    # convert ytd variables to quarterly\n",
     "    out = ytd_to_quarterly(df, suffix='_q')\n",
     "\n",
-    "    # industry\n",
-    "    out['sic_full'] = df['sic']\n",
-    "    out['naics_full'] = df['naics']\n",
+    "    # industry \n",
+    "    out['sich_str'] = df['sich'].astype('Int64').astype('string').str.zfill(4)\n",
+    "    out['naicsh_str'] = df['naicsh'].astype('Int64').astype('string')\n",
+    "    out['sic_str'] = df['sic'].astype('string')\n",
+    "    out['naics_str'] = df['naics'].astype('string')\n",
+    "\n",
+    "    out['sic_full'] = out['sich_str'].fillna(out['sic_str'])\n",
+    "    out['naics_full'] = out['naicsh_str'].fillna(out['naics_str'])\n",
     "\n",
     "    # size\n",
     "    out['stock_price'] = np.abs(df['prccq'])\n",
@@ -1009,7 +1014,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 43 columns</p>\n",
+       "<p>1 rows × 48 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1021,15 +1026,15 @@
        "gvkey  Qdate                                    ...                       \n",
        "001004 2021Q1    NaN      NaN     NaN      NaN  ...      40.0       NaN   \n",
        "\n",
-       "              cflow_full  cflow_is_2la  cflow_cfs_2la  cflow_full_2la  \\\n",
-       "gvkey  Qdate                                                            \n",
-       "001004 2021Q1        NaN           NaN            NaN             NaN   \n",
+       "              cflow_full cflow_is_2la cflow_cfs_2la cflow_full_2la   cash_2a  \\\n",
+       "gvkey  Qdate                                                                   \n",
+       "001004 2021Q1        NaN          NaN           NaN            NaN  0.068542   \n",
        "\n",
-       "                cash_2a  booklev  dividends_2la  repurchases_2la  \n",
-       "gvkey  Qdate                                                      \n",
-       "001004 2021Q1  0.068542      NaN            NaN              NaN  \n",
+       "               booklev  dividends_2la  repurchases_2la  \n",
+       "gvkey  Qdate                                            \n",
+       "001004 2021Q1      NaN            NaN              NaN  \n",
        "\n",
-       "[1 rows x 43 columns]"
+       "[1 rows x 48 columns]"
       ]
      },
      "execution_count": null,
