--- a/nbs/01_wrds/04_compq_ccm.ipynb
+++ b/nbs/01_wrds/04_compq_ccm.ipynb
@@ -323,8 +323,8 @@
        "      <th>fqtr</th>\n",
        "      <th>rdq</th>\n",
        "      <th>sic</th>\n",
-       "      <th>atq</th>\n",
        "      <th>indfmt</th>\n",
+       "      <th>atq</th>\n",
        "      <th>sich</th>\n",
        "      <th>naicsh</th>\n",
        "      <th>permno</th>\n",
@@ -342,8 +342,8 @@
        "      <td>4.0</td>\n",
        "      <td>None</td>\n",
        "      <td>3089</td>\n",
-       "      <td>None</td>\n",
        "      <td>INDL</td>\n",
+       "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>25881.0</td>\n",
@@ -356,8 +356,8 @@
        "</div>"
       ],
       "text/plain": [
-       "    gvkey    datadate  fyearq  fqtr   rdq   sic   atq indfmt  sich naicsh  \\\n",
-       "0  001000  1970-12-31  1970.0   4.0  None  3089  None   INDL  None   None   \n",
+       "    gvkey    datadate  fyearq  fqtr   rdq   sic indfmt   atq  sich naicsh  \\\n",
+       "0  001000  1970-12-31  1970.0   4.0  None  3089   INDL  None  None   None   \n",
        "\n",
        "    permno   permco liid linkprim  \n",
        "0  25881.0  23369.0   01        P  "
@@ -518,16 +518,16 @@
        "      <th>fyearq</th>\n",
        "      <th>fqtr</th>\n",
        "      <th>rdq</th>\n",
-       "      <th>cdvcy</th>\n",
-       "      <th>sstky</th>\n",
-       "      <th>gdwlq</th>\n",
-       "      <th>atq</th>\n",
-       "      <th>epsfiq</th>\n",
+       "      <th>epspxq</th>\n",
+       "      <th>sic</th>\n",
+       "      <th>ltq</th>\n",
+       "      <th>niq</th>\n",
+       "      <th>cshprq</th>\n",
        "      <th>...</th>\n",
        "      <th>fyr</th>\n",
-       "      <th>cheq</th>\n",
-       "      <th>apdedateq</th>\n",
-       "      <th>dvpq</th>\n",
+       "      <th>pstkrq</th>\n",
+       "      <th>ppegtq</th>\n",
+       "      <th>oancfy</th>\n",
        "      <th>sich</th>\n",
        "      <th>naicsh</th>\n",
        "      <th>permno</th>\n",
@@ -545,14 +545,14 @@
        "      <td>1.0</td>\n",
        "      <td>None</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>2836</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>18.217</td>\n",
        "      <td>...</td>\n",
        "      <td>12.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2836.0</td>\n",
        "      <td>325414.0</td>\n",
@@ -567,14 +567,14 @@
        "</div>"
       ],
       "text/plain": [
-       "    gvkey    datadate  fyearq  fqtr   rdq  cdvcy  sstky  gdwlq  atq  epsfiq  \\\n",
-       "0  040237  2022-03-31  2022.0   1.0  None    NaN    NaN    NaN  NaN     NaN   \n",
+       "    gvkey    datadate  fyearq  fqtr   rdq  epspxq   sic  ltq  niq  cshprq  \\\n",
+       "0  040237  2022-03-31  2022.0   1.0  None     NaN  2836  NaN  NaN  18.217   \n",
        "\n",
-       "   ...   fyr  cheq  apdedateq  dvpq    sich    naicsh   permno   permco  liid  \\\n",
-       "0  ...  12.0   NaN       None   NaN  2836.0  325414.0  22557.0  59079.0    90   \n",
+       "   ...   fyr  pstkrq  ppegtq  oancfy    sich    naicsh   permno   permco  \\\n",
+       "0  ...  12.0     NaN     NaN     NaN  2836.0  325414.0  22557.0  59079.0   \n",
        "\n",
-       "   linkprim  \n",
-       "0         P  \n",
+       "   liid  linkprim  \n",
+       "0    90         P  \n",
        "\n",
        "[1 rows x 81 columns]"
       ]
@@ -671,14 +671,14 @@
        "      <th>fqtr</th>\n",
        "      <th>rdq</th>\n",
        "      <th>gvkey</th>\n",
-       "      <th>cdvcy</th>\n",
-       "      <th>sstky</th>\n",
+       "      <th>epspxq</th>\n",
+       "      <th>sic</th>\n",
        "      <th>...</th>\n",
-       "      <th>oancfy</th>\n",
+       "      <th>ibq</th>\n",
        "      <th>fyr</th>\n",
-       "      <th>cheq</th>\n",
-       "      <th>apdedateq</th>\n",
-       "      <th>dvpq</th>\n",
+       "      <th>pstkrq</th>\n",
+       "      <th>ppegtq</th>\n",
+       "      <th>oancfy</th>\n",
        "      <th>sich</th>\n",
        "      <th>naicsh</th>\n",
        "      <th>permco</th>\n",
@@ -723,14 +723,14 @@
        "      <td>2.0</td>\n",
        "      <td>2021-04-26</td>\n",
        "      <td>012825</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>13.582</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>2050</td>\n",
        "      <td>...</td>\n",
-       "      <td>26.781</td>\n",
+       "      <td>6.061</td>\n",
        "      <td>9.0</td>\n",
-       "      <td>259.765</td>\n",
-       "      <td>2021-03-27</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>781.703</td>\n",
+       "      <td>26.781</td>\n",
        "      <td>2050.0</td>\n",
        "      <td>311812.0</td>\n",
        "      <td>7976.0</td>\n",
@@ -747,13 +747,13 @@
        "permno  Qdate                                                              \n",
        "10026.0 2021Q1  2021-03-31 2021-03-31    2021-06-30       2021Q2  2021.0   \n",
        "\n",
-       "                fqtr        rdq   gvkey  cdvcy   sstky  ...  oancfy  fyr  \\\n",
-       "permno  Qdate                                           ...                \n",
-       "10026.0 2021Q1   2.0 2021-04-26  012825    NaN  13.582  ...  26.781  9.0   \n",
+       "                fqtr        rdq   gvkey  epspxq   sic  ...    ibq  fyr  \\\n",
+       "permno  Qdate                                          ...               \n",
+       "10026.0 2021Q1   2.0 2021-04-26  012825    0.32  2050  ...  6.061  9.0   \n",
        "\n",
-       "                   cheq   apdedateq  dvpq    sich    naicsh  permco  liid  \\\n",
-       "permno  Qdate                                                               \n",
-       "10026.0 2021Q1  259.765  2021-03-27   0.0  2050.0  311812.0  7976.0    01   \n",
+       "                pstkrq   ppegtq  oancfy    sich    naicsh  permco  liid  \\\n",
+       "permno  Qdate                                                             \n",
+       "10026.0 2021Q1     0.0  781.703  26.781  2050.0  311812.0  7976.0    01   \n",
        "\n",
        "                linkprim  \n",
        "permno  Qdate             \n",
@@ -890,9 +890,14 @@
     "    # convert ytd variables to quarterly\n",
     "    out = ytd_to_quarterly(df, suffix='_q')\n",
     "\n",
-    "    # industry\n",
-    "    out['sic_full'] = df['sic']\n",
-    "    out['naics_full'] = df['naics']\n",
+    "    # industry \n",
+    "    out['sich_str'] = df['sich'].astype('Int64').astype('string').str.zfill(4)\n",
+    "    out['naicsh_str'] = df['naicsh'].astype('Int64').astype('string')\n",
+    "    out['sic_str'] = df['sic'].astype('string')\n",
+    "    out['naics_str'] = df['naics'].astype('string')\n",
+    "\n",
+    "    out['sic_full'] = out['sich_str'].fillna(out['sic_str'])\n",
+    "    out['naics_full'] = out['naicsh_str'].fillna(out['naics_str'])\n",
     "\n",
     "    # size\n",
     "    out['stock_price'] = np.abs(df['prccq'])\n",
@@ -1059,7 +1064,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 44 columns</p>\n",
+       "<p>1 rows × 48 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1071,15 +1076,15 @@
        "permno  Qdate                                    ...                       \n",
        "10026.0 2021Q1    NaN      NaN     NaN      NaN  ...    18.823       NaN   \n",
        "\n",
-       "               cflow_full  cflow_is_2la  cflow_cfs_2la  cflow_full_2la  \\\n",
-       "permno  Qdate                                                            \n",
-       "10026.0 2021Q1        NaN           NaN            NaN             NaN   \n",
+       "               cflow_full cflow_is_2la cflow_cfs_2la cflow_full_2la  cash_2a  \\\n",
+       "permno  Qdate                                                                  \n",
+       "10026.0 2021Q1        NaN          NaN           NaN            NaN  0.24393   \n",
        "\n",
-       "                cash_2a   booklev  dividends_2la  repurchases_2la  \n",
-       "permno  Qdate                                                      \n",
-       "10026.0 2021Q1  0.24393  0.053648            NaN              NaN  \n",
+       "                 booklev  dividends_2la  repurchases_2la  \n",
+       "permno  Qdate                                             \n",
+       "10026.0 2021Q1  0.053648            NaN              NaN  \n",
        "\n",
-       "[1 rows x 44 columns]"
+       "[1 rows x 48 columns]"
       ]
      },
      "execution_count": null,
