fixed nrows argument in ibes_ltg

--- a/nbs/01_wrds/05_ratios.ipynb
+++ b/nbs/01_wrds/05_ratios.ipynb
@@ -168,7 +168,7 @@
    "source": [
     "#| export\n",
     "def get_raw_data(vars: List[str]=None, # If None or '*', downloads all variables\n",
-    "             obs_limit: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
+    "             nrows: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
     "             start_date: str=None, # Start date in MM/DD/YYYY format\n",
     "             end_date: str=None #End date in MM/DD/YYYY format\n",
     "             ) -> pd.DataFrame:\n",
@@ -181,10 +181,10 @@
     "    sql_string=f\"\"\"SELECT {vars} FROM {LIBRARY}.{TABLE} WHERE 1 = 1 \"\"\"\n",
     "    if start_date is not None: sql_string += r\" AND public_date >= %(start_date)s\"\n",
     "    if end_date is not None: sql_string += r\" AND public_date <= %(end_date)s\"\n",
-    "    if obs_limit is not None: sql_string += r\" LIMIT %(obs_limit)s\"\n",
+    "    if nrows is not None: sql_string += r\" LIMIT %(nrows)s\"\n",
     "\n",
     "    return wrds_api.download(sql_string,\n",
-    "                            params={'start_date':start_date, 'end_date':end_date, 'obs_limit':obs_limit})"
+    "                            params={'start_date':start_date, 'end_date':end_date, 'nrows':nrows})"
    ]
   },
   {
@@ -194,7 +194,7 @@
    "outputs": [],
    "source": [
     "#| eval: false\n",
-    "raw = get_raw_data(start_date='01/01/2021', obs_limit=1)"
+    "raw = get_raw_data(start_date='01/01/2021', nrows=1)"
    ]
   },
   {
@@ -326,7 +326,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "r = get_raw_data(vars = ['be', 'bm'], obs_limit=10)\n",
+    "r = get_raw_data(vars = ['be', 'bm'], nrows=10)\n",
     "r.head(1)"
    ]
   },
